--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion64) precise; urgency=low
+
+  * ELSA syslog-ng.conf rewrite r_pipes #447 
+
+ -- Doug Burks <doug.burks@gmail.com>  Wed, 29 Apr 2015 15:46:34 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion63) precise; urgency=low
 
   * restart web server after updating /etc/elsa_web.conf 
