--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion67) precise; urgency=low
+
+  * update syslog-ng patterns 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 13:02:13 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion66) precise; urgency=low
 
   * backup syslog-ng.conf before making changes 
