--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion68) precise; urgency=low
+
+  * only replace pipes for Bro logs  
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 13:27:24 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion67) precise; urgency=low
 
   * update syslog-ng patterns 
