--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion69) precise; urgency=low
+
+  * Issue 512: ELSA syslog-ng.conf filter f_bro_headers 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 14:55:02 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion68) precise; urgency=low
 
   * only replace pipes for Bro logs  
