--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion70) precise; urgency=low
+
+  * update securityonion-elsa-web.conf 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 20:54:52 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion69) precise; urgency=low
 
   * Issue 512: ELSA syslog-ng.conf filter f_bro_headers 
