--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion72) precise; urgency=low
+
+  * log to /var/log/nsm/ and send sphinx output to separate log 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 01 May 2015 06:25:42 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion71) precise; urgency=low
 
   * fix database schema for new installs and clean up securityonion-elsa-config.sh 
