--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion74) precise; urgency=low
+
+  * remove elsa_orig.sql 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 01 May 2015 07:04:43 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion73) precise; urgency=low
 
   * relocate securityonion-elsa-schema.sql 
