--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion76) precise; urgency=low
+
+  * fix typo 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sun, 03 May 2015 16:23:28 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion75) precise; urgency=low
 
   * set Apache mpm_prefork_module MaxRequestsPerChild to 2 
