--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion79) precise; urgency=low
+
+  * add new transforms to /etc/elsa_web.conf 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 04 May 2015 10:10:28 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion78) precise; urgency=low
 
   * a2enmod perl 
