--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion80) precise; urgency=low
+
+  * reset query_timeout to ELSA default 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 04 May 2015 10:32:11 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion79) precise; urgency=low
 
   * add new transforms to /etc/elsa_web.conf 
