--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion81) precise; urgency=low
+
+  * fix elsa_web.conf for new installs 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 04 May 2015 13:29:55 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion80) precise; urgency=low
 
   * reset query_timeout to ELSA default 
