--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion83) precise; urgency=low
+
+  * add cli.sh 
+
+ -- Doug Burks <doug.burks@gmail.com>  Tue, 05 May 2015 11:17:36 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion82) precise; urgency=low
 
   * update Apache config for new installs 
