--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion93) precise; urgency=low
+
+  * securityonion-elsa-extras: update bro_intel parser for Bro 2.4 #765 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 03 Jul 2015 18:11:13 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion92) precise; urgency=low
 
   * securityonion-elsa-extras: update bro_conn parser for Bro 2.4 #762 
