--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion95) precise; urgency=low
+
+  * Issue 773: securityonion-elsa-extras: add Windows and Cisco parsers from Brian Kellogg 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 10 Jul 2015 10:29:53 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion94) precise; urgency=low
 
   * securityonion-elsa-extras: update bro_ssl parser for Bro 2.4 #768 
