--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion98) precise; urgency=low
+
+  * remove old sysmon and win_process_tracking pattern files 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 10 Jul 2015 16:48:15 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion97) precise; urgency=low
 
   * merge Brian's windows parser update 
