--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion100) precise; urgency=low
+
+  * securityonion-elsa-extras: add parser for Bro 2.4 mysql.log #755 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 06 Aug 2015 15:30:24 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion99) precise; urgency=low
 
   * merge Brian's 4740 fix 
