--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion101) precise; urgency=low
+
+  * securityonion-elsa-extras: add parser for Bro 2.4 kerberos.log #756 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 20 Aug 2015 16:14:34 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion100) precise; urgency=low
 
   * securityonion-elsa-extras: add parser for Bro 2.4 mysql.log #755 
