--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion103) precise; urgency=low
+
+  * securityonion-elsa-extras: add parser for Bro 2.4 rdp.log #757 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 21 Aug 2015 11:13:13 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion102) precise; urgency=low
 
   * install kerberos parser properly 
