--- a/debian/install
+++ b/debian/install
@@ -17,6 +17,7 @@ contrib/parsers/bro_irc etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_kerberos etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_mysql etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_notice etc/elsa/patterns.d/securityonion
+contrib/parsers/bro_pe etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_radius etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_rdp etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_snmp etc/elsa/patterns.d/securityonion
