--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion109) precise; urgency=low
+
+  * Issue 780: securityonion-elsa-extras: add parser for IIS logs 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sat, 22 Aug 2015 06:48:28 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion108) precise; urgency=low
 
   * formatting change for postinst 
