--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20131117-1ubuntu0securityonion111) precise; urgency=low
+
+  * Issue 796: securityonion-elsa-extras: Add script to fix ELSA syslogs_archive_1 issue
+
+ -- Doug Burks <doug.burks@gmail.com>  Tue, 25 Aug 2015 09:21:08 -0400
+
 securityonion-elsa-extras (20131117-1ubuntu0securityonion110) precise; urgency=low
 
   * set syslog-ng version 3.3 for new installations 
