sites-available change elsa to elsa.conf

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,570 +1,5 @@
-securityonion-elsa-extras (20131117-1ubuntu0securityonion113) trusty; urgency=medium
-
-  * rebuild for trusty 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 05 Oct 2015 15:45:46 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion112) precise; urgency=low
-
-  * fix grammar 
-
- -- Doug Burks <doug.burks@gmail.com>  Tue, 25 Aug 2015 10:08:15 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion111) precise; urgency=low
-
-  * Issue 796: securityonion-elsa-extras: Add script to fix ELSA syslogs_archive_1 issue
-
- -- Doug Burks <doug.burks@gmail.com>  Tue, 25 Aug 2015 09:21:08 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion110) precise; urgency=low
-
-  * set syslog-ng version 3.3 for new installations 
-
- -- Doug Burks <doug.burks@gmail.com>  Sat, 22 Aug 2015 07:42:38 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion109) precise; urgency=low
-
-  * Issue 780: securityonion-elsa-extras: add parser for IIS logs 
-
- -- Doug Burks <doug.burks@gmail.com>  Sat, 22 Aug 2015 06:48:28 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion108) precise; urgency=low
-
-  * formatting change for postinst 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 21 Aug 2015 16:28:22 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion107) precise; urgency=low
-
-  * Issue 776: securityonion-elsa-extras: set version 3.3 in syslog-ng.conf 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 21 Aug 2015 16:15:33 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion106) precise; urgency=low
-
-  * Issue 782: securityonion-elsa-extras: update sysmon parser 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 21 Aug 2015 16:04:53 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion105) precise; urgency=low
-
-  * securityonion-elsa-extras: add parser for Bro 2.4 sip.log #759 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 21 Aug 2015 14:33:10 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion104) precise; urgency=low
-
-  * securityonion-elsa-extras: add parser for Bro 2.4 pe.log #758 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 21 Aug 2015 13:04:03 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion103) precise; urgency=low
-
-  * securityonion-elsa-extras: add parser for Bro 2.4 rdp.log #757 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 21 Aug 2015 11:13:13 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion102) precise; urgency=low
-
-  * install kerberos parser properly 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 20 Aug 2015 16:43:15 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion101) precise; urgency=low
-
-  * securityonion-elsa-extras: add parser for Bro 2.4 kerberos.log #756 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 20 Aug 2015 16:14:34 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion100) precise; urgency=low
-
-  * securityonion-elsa-extras: add parser for Bro 2.4 mysql.log #755 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 06 Aug 2015 15:30:24 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion99) precise; urgency=low
-
-  * merge Brian's 4740 fix 
-
- -- Doug Burks <doug.burks@gmail.com>  Sun, 12 Jul 2015 13:49:19 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion98) precise; urgency=low
-
-  * remove old sysmon and win_process_tracking pattern files 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 10 Jul 2015 16:48:15 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion97) precise; urgency=low
-
-  * merge Brian's windows parser update 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 10 Jul 2015 16:20:34 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion96) precise; urgency=low
-
-  * Issue 774: securityonion-elsa-extras: update bro_ssh parser for Bro 2.4 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 10 Jul 2015 15:34:53 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion95) precise; urgency=low
-
-  * Issue 773: securityonion-elsa-extras: add Windows and Cisco parsers from Brian Kellogg 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 10 Jul 2015 10:29:53 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion94) precise; urgency=low
-
-  * securityonion-elsa-extras: update bro_ssl parser for Bro 2.4 #768 
-
- -- Doug Burks <doug.burks@gmail.com>  Sat, 04 Jul 2015 09:52:44 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion93) precise; urgency=low
-
-  * securityonion-elsa-extras: update bro_intel parser for Bro 2.4 #765 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 03 Jul 2015 18:11:13 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion92) precise; urgency=low
-
-  * securityonion-elsa-extras: update bro_conn parser for Bro 2.4 #762 
-
- -- Doug Burks <doug.burks@gmail.com>  Tue, 23 Jun 2015 09:35:34 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion91) precise; urgency=low
-
-  * always check to see if ELSA is enabled and, if so, update patterns 
-
- -- Doug Burks <doug.burks@gmail.com>  Tue, 16 Jun 2015 11:37:46 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion90) precise; urgency=low
-
-  * ELSA 1205 package duplicated syslog-ng.conf entries on non-ELSA systems #747
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 12 Jun 2015 09:17:02 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion89) precise; urgency=low
-
-  * ELSA 1205 package enabled perl module on non-ELSA systems #746 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 11 Jun 2015 16:31:40 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion88) precise; urgency=low
-
-  * sensors running Setup need new elsa_web.conf options 
-
- -- Doug Burks <doug.burks@gmail.com>  Tue, 02 Jun 2015 10:02:57 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion87) precise; urgency=low
-
-  * update bro_notice parser 
-
- -- Doug Burks <doug.burks@gmail.com>  Tue, 19 May 2015 07:01:45 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion86) precise; urgency=low
-
-  * ELSA: update bro_notice parser to parse src and dst fields #674 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 18 May 2015 17:16:22 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion85) precise; urgency=low
-
-  * fix filter f_snort 
-
- -- Doug Burks <doug.burks@gmail.com>  Wed, 06 May 2015 16:45:29 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion84) precise; urgency=low
-
-  * Issue 726: ELSA syslog-ng.conf - add filesystem destinations 
-
- -- Doug Burks <doug.burks@gmail.com>  Wed, 06 May 2015 16:09:18 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion83) precise; urgency=low
-
-  * add cli.sh 
-
- -- Doug Burks <doug.burks@gmail.com>  Tue, 05 May 2015 11:17:36 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion82) precise; urgency=low
-
-  * update Apache config for new installs 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 04 May 2015 14:15:07 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion81) precise; urgency=low
-
-  * fix elsa_web.conf for new installs 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 04 May 2015 13:29:55 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion80) precise; urgency=low
-
-  * reset query_timeout to ELSA default 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 04 May 2015 10:32:11 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion79) precise; urgency=low
-
-  * add new transforms to /etc/elsa_web.conf 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 04 May 2015 10:10:28 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion78) precise; urgency=low
-
-  * a2enmod perl 
-
- -- Doug Burks <doug.burks@gmail.com>  Sun, 03 May 2015 22:59:59 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion77) precise; urgency=low
-
-  * more apache config 
-
- -- Doug Burks <doug.burks@gmail.com>  Sun, 03 May 2015 22:53:37 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion76) precise; urgency=low
-
-  * fix typo 
-
- -- Doug Burks <doug.burks@gmail.com>  Sun, 03 May 2015 16:23:28 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion75) precise; urgency=low
-
-  * set Apache mpm_prefork_module MaxRequestsPerChild to 2 
-
- -- Doug Burks <doug.burks@gmail.com>  Sun, 03 May 2015 15:59:16 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion74) precise; urgency=low
-
-  * remove elsa_orig.sql 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 01 May 2015 07:04:43 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion73) precise; urgency=low
-
-  * relocate securityonion-elsa-schema.sql 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 01 May 2015 06:34:52 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion72) precise; urgency=low
-
-  * log to /var/log/nsm/ and send sphinx output to separate log 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 01 May 2015 06:25:42 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion71) precise; urgency=low
-
-  * fix database schema for new installs and clean up securityonion-elsa-config.sh 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 01 May 2015 05:52:21 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion70) precise; urgency=low
-
-  * update securityonion-elsa-web.conf 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 20:54:52 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion69) precise; urgency=low
-
-  * Issue 512: ELSA syslog-ng.conf filter f_bro_headers 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 14:55:02 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion68) precise; urgency=low
-
-  * only replace pipes for Bro logs  
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 13:27:24 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion67) precise; urgency=low
-
-  * update syslog-ng patterns 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 13:02:13 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion66) precise; urgency=low
-
-  * backup syslog-ng.conf before making changes 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 11:00:57 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion65) precise; urgency=low
-
-  * fix SYSLOG_CONF in postinst 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 30 Apr 2015 10:50:31 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion64) precise; urgency=low
-
-  * ELSA syslog-ng.conf rewrite r_pipes #447 
-
- -- Doug Burks <doug.burks@gmail.com>  Wed, 29 Apr 2015 15:46:34 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion63) precise; urgency=low
-
-  * restart web server after updating /etc/elsa_web.conf 
-
- -- Doug Burks <doug.burks@gmail.com>  Wed, 29 Apr 2015 15:07:26 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion62) precise; urgency=low
-
-  * masters and sensors need to migrate /etc/elsa_web.conf to 1205 
-
- -- Doug Burks <doug.burks@gmail.com>  Sat, 25 Apr 2015 19:34:43 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion61) precise; urgency=low
-
-  * backup /etc/elsa_web.conf before modifying 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 24 Apr 2015 16:48:19 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion60) precise; urgency=low
-
-  * fix postinst 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 24 Apr 2015 16:39:47 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion59) precise; urgency=low
-
-  * migrate elsa_web.conf for ELSA 1205 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 24 Apr 2015 16:20:05 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion58) precise; urgency=low
-
-  * fix order of sql statements 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 27 Mar 2015 19:58:41 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion57) precise; urgency=low
-
-  * parsers for pfsense, sysmon, and windows process auditing 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 27 Mar 2015 16:58:49 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion56) precise; urgency=low
-
-  * update bind parser 
-
- -- Doug Burks <doug.burks@gmail.com>  Sun, 25 Jan 2015 13:43:08 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion55) precise; urgency=low
-
-  * fix bro_dns parser 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 09 Jan 2015 15:00:11 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion54) precise; urgency=low
-
-  * Issue 669: ELSA: update parsers for Bro DNS and BIND
-  * Issue 668: ELSA: pdbtool errors 
-
- -- Doug Burks <doug.burks@gmail.com>  Fri, 09 Jan 2015 12:38:22 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion53) precise; urgency=low
-
-  * new installs need database additions for resp_country_code 
-
- -- Doug Burks <doug.burks@gmail.com>  Wed, 24 Dec 2014 16:55:01 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion52) precise; urgency=low
-
-  * install file needs to install new bro_conn parser 
-
- -- Doug Burks <doug.burks@gmail.com>  Wed, 24 Dec 2014 15:52:25 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion51) precise; urgency=low
-
-  * Issue 656: ELSA: update parser for bro_conn to parse country code
-
- -- Doug Burks <doug.burks@gmail.com>  Wed, 24 Dec 2014 14:41:18 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion50) precise; urgency=low
-
-  * parse Bro radius.log 
-
- -- Doug Burks <doug.burks@gmail.com>  Tue, 18 Nov 2014 15:36:39 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion49) precise; urgency=low
-
-  * parse Bro snmp.log 
-
- -- Doug Burks <doug.burks@gmail.com>  Tue, 18 Nov 2014 11:39:36 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion48) precise; urgency=low
-
-  * check for existence of x509 entries in syslog-ng.conf before updating 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 17 Nov 2014 16:32:30 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion47) precise; urgency=low
-
-  * update syslog-ng.conf to monitor x509.log 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 17 Nov 2014 16:20:09 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion46) precise; urgency=low
-
-  * parse Bro x509.log 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 17 Nov 2014 15:10:36 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion45) precise; urgency=low
-
-  * fix database for new installations 
-
- -- Doug Burks <doug.burks@gmail.com>  Sat, 18 Oct 2014 12:02:48 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion44) precise; urgency=low
-
-  * Issue 633:	securityonion-elsa-extras: parse ssl_version and ssl_cipher out of Bro ssl.log 
-
- -- Doug Burks <doug.burks@gmail.com>  Thu, 16 Oct 2014 13:05:19 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion43) precise; urgency=low
-
-  * fix install and postinst 
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 18 Aug 2014 22:07:56 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion42) precise; urgency=low
-
-  * Fix bro_ssl parser for Bro 2.3
-
- -- Doug Burks <doug.burks@gmail.com>  Mon, 18 Aug 2014 18:55:28 -0400
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion41) precise; urgency=low
-
-  * Add support for Bro's Intel Framework
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Fri, 14 Feb 2014 11:35:24 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion37) precise; urgency=low
-
-  * Add ruby1.9.1 as a dependency.
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Fri, 14 Feb 2014 09:51:10 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion36) precise; urgency=low
-
-  * Fix a typo in log file creation.
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Tue, 11 Feb 2014 10:14:58 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion35) precise; urgency=low
-
-  * Update the localhost peer
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Wed, 05 Feb 2014 10:53:16 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion34) precise; urgency=low
-
-  * Randomize the API key for web nodes during config
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Tue, 04 Feb 2014 16:14:59 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion33) precise; urgency=low
-
-  * Add support for updating elsa_web.conf with a random API key.
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Wed, 29 Jan 2014 14:44:36 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion28) precise; urgency=low
-
-  * Correct the filename for the Bro tunnel.log file in syslog-ng's syslog-ng.conf
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Thu, 26 Dec 2013 11:12:03 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion25) precise; urgency=low
-
-  * Merge patterns for bro_notice
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Mon, 16 Dec 2013 11:18:34 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion24) precise; urgency=low
-
-  * correct elsa's mysql_dir 
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Sun, 15 Dec 2013 22:36:26 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion23) precise; urgency=low
-
-  * Remove old BRO_NOTICE pattern
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Sun, 15 Dec 2013 21:40:48 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion22) precise; urgency=low
-
-  * More changes to ELSA cron
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Fri, 13 Dec 2013 09:33:20 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion21) precise; urgency=low
-
-  * Apply the changes to BRO_NOTICE in the correct order
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Wed, 11 Dec 2013 10:06:08 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion19) precise; urgency=low
-
-  * Fix assigned_ip field in BRO_DHCP parsers to be IPv4 and not NUMBER
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Thu, 05 Dec 2013 11:54:01 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion18) precise; urgency=low
-
-  * Include revision number in elsa_node.conf for upgrades and fresh install
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Sun, 24 Nov 2013 13:13:41 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion17) precise; urgency=low
-
-  * Correct typo in BRO_SOFTWARE fields_classes_map
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Sun, 24 Nov 2013 12:57:43 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion16) precise; urgency=low
-
-  * Add parsers for BRO's SSH, Software and IRC logs
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Sun, 24 Nov 2013 09:30:50 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion14) precise; urgency=low
-
-  * Up the value for max_matches to 10000 in sphinx.conf
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Thu, 21 Nov 2013 12:18:03 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion12) precise; urgency=low
-
-  * Correct BRO_HTTP ordering to preserve previous logs
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Wed, 20 Nov 2013 16:14:26 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion11) precise; urgency=low
-
-  * Support BRO_NOTICE from Bro 2.2
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Sun, 17 Nov 2013 07:26:07 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion6) precise; urgency=low
-
-  * Correct the BRO_HTTP parser
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Sun, 17 Nov 2013 04:36:28 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion5) precise; urgency=low
-
-  * Update BRO_HTTP parser to support Bro v2.2
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Sat, 16 Nov 2013 12:16:57 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion4) precise; urgency=low
-
-  * Fix class nums in bro_ftp and bro_syslog
-
- -- Scott Allen Runnels <srunnels@gmail.com>  Sat, 16 Nov 2013 05:26:08 -0500
-
-securityonion-elsa-extras (20131117-1ubuntu0securityonion3) precise; urgency=low
+securityonion-elsa-extras (20151011-1ubuntu1securityonion1) trusty; urgency=low
 
   * Initial release
 
- -- Scott Allen Runnels <srunnels@gmail.com>  Fri, 15 Nov 2013 20:19:30 -0500
+ -- Doug Burks <doug.burks@gmail.com>  Sun, 11 Oct 2015 13:07:51 -0400
