--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion2) trusty; urgency=medium
+
+  * add "Require all granted" to apache elsa.conf 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sun, 11 Oct 2015 16:56:22 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion1) trusty; urgency=low
 
   * Initial release
