--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion4) trusty; urgency=medium
+
+  * fix cron job 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sun, 11 Oct 2015 17:53:45 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion3) trusty; urgency=medium
 
   * fix interface from syslog-ng to elsa.pl 
