--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion5) trusty; urgency=medium
+
+  * add local::lib to elsa_startup.pl 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sun, 11 Oct 2015 19:03:40 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion4) trusty; urgency=medium
 
   * fix cron job 
