--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion6) trusty; urgency=medium
+
+  * add perl environment to securityonion-elsa-config.sh 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 12 Oct 2015 12:08:35 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion5) trusty; urgency=medium
 
   * add local::lib to elsa_startup.pl 
