--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion7) trusty; urgency=medium
+
+  * set MaxConnectionsPerChild in mpm_prefork.conf
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 12 Oct 2015 13:07:56 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion6) trusty; urgency=medium
 
   * add perl environment to securityonion-elsa-config.sh 
