--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion8) trusty; urgency=medium
+
+  * fix /etc/cron.d/elsa cron job 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 12 Oct 2015 14:01:34 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion7) trusty; urgency=medium
 
   * set MaxConnectionsPerChild in mpm_prefork.conf
