--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion12) trusty; urgency=medium
+
+  * improve log message about incorrect group on /etc/elsa*.conf 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 26 Oct 2015 11:35:56 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion11) trusty; urgency=medium
 
   * increase syslog-ng.conf version to 3.5 
