--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion13) trusty; urgency=medium
+
+  * configure Apache to proxy /elsa-query/ to port 3154 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 26 Oct 2015 12:05:35 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion12) trusty; urgency=medium
 
   * improve log message about incorrect group on /etc/elsa*.conf 
