--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion16) trusty; urgency=medium
+
+  * change cli.sh to use new ELSA API address 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 30 Oct 2015 09:47:09 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion15) trusty; urgency=medium
 
   * remove NameVirtualHost from securityonion_apache_site.conf 
