--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion19) trusty; urgency=medium
+
+  * restart Apache 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 09 Nov 2015 13:59:57 -0500
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion18) trusty; urgency=medium
 
   * postinst - update ELSA configuration 
