--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion21) trusty; urgency=medium
+
+  * update ELSA cron job 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 12 Nov 2015 15:29:48 -0500
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion20) trusty; urgency=medium
 
   * restart Apache using apache2ctl 
