--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion33) trusty; urgency=medium
+
+  * securityonion-elsa-extras: merge additional patterns #827
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 29 Jul 2016 15:20:51 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion32) trusty; urgency=medium
 
   * fix securityonion-elsa-reset 
