--- a/debian/install
+++ b/debian/install
@@ -7,9 +7,11 @@ contrib/securityonion-patterndb.xml /etc/elsa/patterns.d/elsa
 contrib/parsers/asa_conn etc/elsa/patterns.d/securityonion
 contrib/parsers/asa_deny etc/elsa/patterns.d/securityonion
 contrib/parsers/asa_vpn etc/elsa/patterns.d/securityonion
+contrib/parsers/autoruns etc/elsa/patterns.d/securityonion
 contrib/parsers/bind etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_conn etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_dhcp etc/elsa/patterns.d/securityonion
+contrib/parsers/bro_dnp3 etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_dns etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_files etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_ftp etc/elsa/patterns.d/securityonion
@@ -17,6 +19,7 @@ contrib/parsers/bro_http etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_intel etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_irc etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_kerberos etc/elsa/patterns.d/securityonion
+contrib/parsers/bro_modbus etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_mysql etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_notice etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_pe etc/elsa/patterns.d/securityonion
@@ -31,6 +34,9 @@ contrib/parsers/bro_syslog etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_tunnel etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_weird etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_x509 etc/elsa/patterns.d/securityonion
+contrib/parsers/citrix_netscaler etc/elsa/patterns.d/securityonion
+contrib/parsers/dhcp etc/elsa/patterns.d/securityonion
+contrib/parsers/hips etc/elsa/patterns.d/securityonion
 contrib/parsers/iis etc/elsa/patterns.d/securityonion
 contrib/parsers/pfsense etc/elsa/patterns.d/securityonion
 contrib/parsers/windows etc/elsa/patterns.d/securityonion
