--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion35) trusty; urgency=medium
+
+  * change autorun to autoruns 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sat, 30 Jul 2016 07:56:00 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion34) trusty; urgency=medium
 
   * postinst - mkdir /nsm/elsa/ if it doesn't already exist 
