--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion38) trusty; urgency=medium
+
+  * Issue 997: securityonion-elsa-extras: better parsing for event id 4776 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 26 Sep 2016 15:44:09 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion37) trusty; urgency=medium
 
   * securityonion-elsa-extras: add "AR-LOG" header to autoruns pattern #983 
