--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion39) trusty; urgency=medium
+
+  * Issue 1010: securityonion-elsa-extras: Windows process enhancements 
+
+ -- Doug Burks <doug.burks@gmail.com>  Wed, 19 Oct 2016 10:45:30 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion38) trusty; urgency=medium
 
   * Issue 997: securityonion-elsa-extras: better parsing for event id 4776 
