--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion41) trusty; urgency=medium
+
+  * update bro_dns pattern for Bro 2.5 
+
+ -- Doug Burks <doug.burks@gmail.com>  Wed, 07 Dec 2016 13:57:45 -0500
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion40) trusty; urgency=medium
 
   * update database schema for new installations 
