--- a/debian/install
+++ b/debian/install
@@ -26,6 +26,7 @@ contrib/parsers/bro_notice etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_pe etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_radius etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_rdp etc/elsa/patterns.d/securityonion
+contrib/parsers/bro_rfb etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_sip etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_smtp etc/elsa/patterns.d/securityonion
 contrib/parsers/bro_snmp etc/elsa/patterns.d/securityonion
