--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion51) trusty; urgency=medium
+
+  * Issue 1059: securityonion-elsa-extras: cron.pl should check to see if it's already running 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 24 Aug 2017 10:33:30 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion50) trusty; urgency=medium
 
   * merge pull requests 
