--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion52) trusty; urgency=medium
+
+  * install securityonion-elsa-log-calc 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 24 Aug 2017 11:21:07 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion51) trusty; urgency=medium
 
   * Issue 1059: securityonion-elsa-extras: cron.pl should check to see if it's already running 
