--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion53) trusty; urgency=medium
+
+  * improve cron job 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 24 Aug 2017 14:49:10 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion52) trusty; urgency=medium
 
   * install securityonion-elsa-log-calc 
