--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-elsa-extras (20151011-1ubuntu1securityonion54) trusty; urgency=medium
+
+  * fix typo 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 24 Aug 2017 16:06:05 -0400
+
 securityonion-elsa-extras (20151011-1ubuntu1securityonion53) trusty; urgency=medium
 
   * improve cron job 
